Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -786,29 +786,56 @@
          "text": [
           "cost curve slope: -548316.9999998063",
           "cost curve slope: -318023.86000024853",
-          "cost curve slope: -87730.72000032698"
+          "cost curve slope: -184453.83880040026",
+          "cost curve slope: -106983.22650372575",
+          "cost curve slope: -62050.271372208954",
+          "cost curve slope: -35989.15739588847",
+          "cost curve slope: -20873.711289696075",
+          "cost curve slope: -12106.752547970245",
+          "cost curve slope: -7021.916477824561",
+          "cost curve slope: -4072.711557128059",
+          "cost curve slope: -2362.172703124088",
+          "cost curve slope: -1370.0601677373925"
          ],
          "type": "scatter",
-         "uid": "3cde1868-b140-11e9-811f-211e20037d5b",
+         "uid": "4ba32d78-b142-11e9-811f-211e20037d5b",
          "x": [
           0,
           0.5483169999998062,
-          1.0966339999996124
+          0.8663408600000547,
+          1.050794698800455,
+          1.1577779253041809,
+          1.2198281966763898,
+          1.2558173540722781,
+          1.2766910653619743,
+          1.2887978179099446,
+          1.295819734387769,
+          1.299892445944897,
+          1.302254618648021
          ],
          "y": [
           368964.16669999994,
           131437.9413767516,
-          20185.359698794015
+          51531.31420747324,
+          24649.097944855268,
+          15604.976802103287,
+          12561.987166284125,
+          11538.008028425651,
+          11193.357340315255,
+          11077.310067278091,
+          11038.209831325046,
+          11025.020590634533,
+          11020.562895703
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"9d103690-6bdb-4844-afa6-f51b03c71b5b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9d103690-6bdb-4844-afa6-f51b03c71b5b\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [\"cost curve slope: -548316.9999998063\", \"cost curve slope: -318023.86000024853\", \"cost curve slope: -87730.72000032698\"], \"x\": [0, 0.5483169999998062, 1.0966339999996124], \"y\": [368964.16669999994, 131437.9413767516, 20185.359698794015], \"type\": \"scatter\", \"uid\": \"3cec77dc-b140-11e9-811f-211e20037d5b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0a7e81a2-2e5e-4922-9715-33434e2e20d5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0a7e81a2-2e5e-4922-9715-33434e2e20d5\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [\"cost curve slope: -548316.9999998063\", \"cost curve slope: -318023.86000024853\", \"cost curve slope: -184453.83880040026\", \"cost curve slope: -106983.22650372575\", \"cost curve slope: -62050.271372208954\", \"cost curve slope: -35989.15739588847\", \"cost curve slope: -20873.711289696075\", \"cost curve slope: -12106.752547970245\", \"cost curve slope: -7021.916477824561\", \"cost curve slope: -4072.711557128059\", \"cost curve slope: -2362.172703124088\", \"cost curve slope: -1370.0601677373925\"], \"x\": [0, 0.5483169999998062, 0.8663408600000547, 1.050794698800455, 1.1577779253041809, 1.2198281966763898, 1.2558173540722781, 1.2766910653619743, 1.2887978179099446, 1.295819734387769, 1.299892445944897, 1.302254618648021], \"y\": [368964.16669999994, 131437.9413767516, 51531.31420747324, 24649.097944855268, 15604.976802103287, 12561.987166284125, 11538.008028425651, 11193.357340315255, 11077.310067278091, 11038.209831325046, 11025.020590634533, 11020.562895703], \"type\": \"scatter\", \"uid\": \"4ba8776a-b142-11e9-811f-211e20037d5b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"9d103690-6bdb-4844-afa6-f51b03c71b5b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9d103690-6bdb-4844-afa6-f51b03c71b5b\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [\"cost curve slope: -548316.9999998063\", \"cost curve slope: -318023.86000024853\", \"cost curve slope: -87730.72000032698\"], \"x\": [0, 0.5483169999998062, 1.0966339999996124], \"y\": [368964.16669999994, 131437.9413767516, 20185.359698794015], \"type\": \"scatter\", \"uid\": \"3cec77dc-b140-11e9-811f-211e20037d5b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0a7e81a2-2e5e-4922-9715-33434e2e20d5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0a7e81a2-2e5e-4922-9715-33434e2e20d5\", [{\"mode\": \"markers\", \"name\": \"data\", \"text\": [\"cost curve slope: -548316.9999998063\", \"cost curve slope: -318023.86000024853\", \"cost curve slope: -184453.83880040026\", \"cost curve slope: -106983.22650372575\", \"cost curve slope: -62050.271372208954\", \"cost curve slope: -35989.15739588847\", \"cost curve slope: -20873.711289696075\", \"cost curve slope: -12106.752547970245\", \"cost curve slope: -7021.916477824561\", \"cost curve slope: -4072.711557128059\", \"cost curve slope: -2362.172703124088\", \"cost curve slope: -1370.0601677373925\"], \"x\": [0, 0.5483169999998062, 0.8663408600000547, 1.050794698800455, 1.1577779253041809, 1.2198281966763898, 1.2558173540722781, 1.2766910653619743, 1.2887978179099446, 1.295819734387769, 1.299892445944897, 1.302254618648021], \"y\": [368964.16669999994, 131437.9413767516, 51531.31420747324, 24649.097944855268, 15604.976802103287, 12561.987166284125, 11538.008028425651, 11193.357340315255, 11077.310067278091, 11038.209831325046, 11025.020590634533, 11020.562895703], \"type\": \"scatter\", \"uid\": \"4ba8776a-b142-11e9-811f-211e20037d5b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
